<resources>
    <string name="app_name">beTourist App</string>
    <string name="kontakt_io_api_key">yxeSKyKOvlPCAWOMxPonBExqNJXhqbSH</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>

    <!-- ABOUT ACTIVITY -->
    <string name="about">Acerca de</string>
    <string name="about_description">  Esta aplicación representa el TFG de la alumna Bianney Cabrera Delgado. Con su realización, se pretende la adquisición de conocimientos y habilidades con respecto al desarrollo de aplicaciones móviles que integren la tecnología beacon.</string>
    <string name="contact"> Contacto: </string>
    <string name="mail">alu0100303612@ull.edu.es</string>

    <!-- HISTORICAL & NATURAL -->
    <string name="historical_monuments">Monumentos Historicos</string>
    <string name="natural_monuments">Monumentos Naturales</string>
    <string name="historical_monument">Monumento Histórico</string>
    <string name="natural">Monumento Natural</string>ing>
    <string name="description">Descripción: </string>
    <string name="town">Municipio: </string>
    <string name="address">Dirección: </string>
    <string name="monument_contact">Contacto: </string>
    <string name="notAvailable">No disponible</string>

    <!-- NATURAL -->
    <string name="difficulty">Dificultad: </string>
    <string name="dangerousness">Peligrosidad: </string>

    <!-- MENU -->
    <string name="menu_map">Mapa</string>
    <string name="menu_preferences">Preferencias</string>
    <string name="menu_about">Acerca de</string>


    <!-- MAPS -->
    <string name="title_activity_maps">Mapa de Monumentos</string>
    <string name="google_maps_key">AIzaSyBS1Y-_AuI25jf6CD7yjVvsksmiIjFiy-k</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
