<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bianney.myapplication.AboutActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        android:layout_marginLeft="4sp"
        android:layout_marginRight="4sp"
        android:clickable="false"
        android:text="@string/about"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="85dp"
        android:textColor="@color/colorBlueGreen" />

    <LinearLayout
        android:id="@+id/li_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title">

        <TextView
            android:id="@+id/txt_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13sp"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:clickable="false"
            android:text="@string/about_description"
            android:textSize="18dp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/li_about"
        android:orientation="horizontal"
        android:layout_marginTop="13sp"
        android:layout_marginLeft="4sp"
        android:layout_marginRight="4sp">
        <ImageView
            android:id="@+id/img_contact"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/historical2"
            android:layout_marginTop="7sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:clickable="false"
            android:textSize="18dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:paddingLeft="4dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:clickable="false"
            android:textSize="18dp"
            android:textColor="#000000"
            android:paddingLeft="5dp"/>
    </LinearLayout>
</RelativeLayout>
